add analysis notebooks

--- a/03 - Linear Regression and Decision Tree predictions.ipynb
+++ b/03 - Linear Regression and Decision Tree predictions.ipynb
@@ -428,7 +428,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "8a608c72",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -843,7 +845,6 @@
     }
    ],
    "source": [
-    "import numbers\n",
     "import Zillow.visualization as zv\n",
     "\n",
     "zv.plot_grid_search_validation_curve(gscv, 'max_leaf_nodes', ylim=(-.0715,-.068))"
