change doc title

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -64,7 +64,7 @@
      
   \input{sections/01.tex}
 
-  \section{Model selection}
+  \section{Model selection and evaluation}
 
   \input{sections/02.tex}
 
