extend sections text

--- a/docs/sections/01.tex
+++ b/docs/sections/01.tex
@@ -6,14 +6,13 @@ There could be different trends in different years and create a single model cou
 
 \subsection{Features}
 
-There are many features! Are all of them useful? The real answer is I don't know. A limited knowledge of the domain made me struggle with some data, even after reading the brief description given by Zillow I was not able to understand what some features were. It's hard to believe how different countries can have such different kind of houses and measures to describe them. So I firstly decided to have a look at wikipedia to better understand few features, after spending some time studying I figured out that some column were in reality duplicated data: a lot of administrative subdivision were redundant and probably not necessary, since we already have a fine grained location data given by coordinates probably a city id or the neighborhood id were not necessary, so I dropped those columns and other administrative categories. Also some other features were duplicated since Zillow provided the raw data they get from assessors and ones calculated by themselves\footnote{see in the comment section at \url{https://www.kaggle.com/c/zillow-prize-1/discussion/33899} for more informations.}.
+There are many features! Are all of them useful? After studying about the functioning of the division by American geographical and administrative areas and the structure of the most common houses in America, I figured out that some column were in reality duplicated data: a lot of administrative subdivision were redundant and probably not necessary, since we already have a fine grained location data given by coordinates probably a city id or the neighborhood id were not necessary, so I dropped those columns and other administrative categories. Also some other features were duplicated since Zillow provided the raw data they get from assessors and ones calculated by themselves\footnote{see in the comment section at \url{https://www.kaggle.com/c/zillow-prize-1/discussion/33899} for more informations.}.
 
-Hence we can see that many rows are missing some values. Diving deep in the problem we can infer that many columns probably\footnote{Here I used the word ``probably'' because we don't really know if missing values were zero or there were some other kind of issue so that the real value was not taken, anyway, based on statistics and logic, it is likely that more houses paid the taxes or didn't have a spa} did not input data when the value was zero (it is not a all comprehensive case, some features were relevant only for certain counties, see more at \ref{counties_importance}). For example, if a house does not have a spa, the value of the column ``spa'' is missing, but it is not zero. For categorical data I decided to fill the missing values with zero, since it is the most likely value, while fill continuous data was more thought. Some columns are missing a lot of fields where others are just missing few hundreds or thousands of rows. I decided to fill the least unpopulated columns with their mean, actually not the exact mean, I used instead the following formula:
+Hence we can see that many rows are missing some values. Diving deep in the problem we can infer that many columns probably\footnote{Here I used the word ``probably'' because we don't really know if missing values were zero or there were some other kind of issue so that the real value was not taken, anyway, based on statistics and logic, it is likely that more houses paid the taxes or didn't have a spa} did not input data when the value was zero (it is not a all comprehensive case, some features were relevant only for certain counties, see more at \ref{counties_importance}). For example, if a house does not have a spa, the value of the column ``spa'' is missing, but it is not zero. For categorical data I decided to fill the missing values with zero, since it is the most likely value, while fill continuous data was more thought. Some columns are missing a lot of fields where others are just missing few hundreds or thousands of rows. I decided to fill the least unpopulated columns with their mean\footnote{Actually not the exact mean, I used instead the following formula:
 $$
     x_{\text{NaN}} = \left\lfloor \frac{1}{n} \sum_{i=1}^{n} x_i \right\rfloor
 $$
-where $n = |\text{column}|$ and $x_i \neq \text{NaN}$. Since I replaced every column with the same function I included the floor function because some features are integers (e. g. year) and other data are not really messed up if I drop some decimals after floating point (e. g. $853$ square feets is almost the same information as $853.37$ square feets, and the same is for values in dollars).
-For each touched feature I added a column to mark if the data has been altered --- to be able to recognise if a specific feature was missing could be significant since we are trying to predict the prediction error of \textit{Zestimate}. %TODO expand
+where $n = |\text{column}|$ and $x_i \neq \text{NaN}$. Since I replaced every column with the same function I included the floor function because some features are integers (e. g. year) and other data are not really messed up if I drop some decimals after floating point (e. g. $853$ square feets is almost the same information as $853.37$ square feets, and the same is for values in dollars).}, and for each touched feature I added a column to mark if the data has been altered --- to be able to recognise if a specific feature was missing could be significant since we are trying to predict the prediction error of \textit{Zestimate} (see more about crafted features at \ref{crafted_features}).
 
 \subsection{Are counties relevant?}\label{counties_importance}
 
@@ -34,5 +33,5 @@ $$
     \mathcal{N}\left(\frac{\sum_{i=1}^n x_i}{n}, \frac{\sum_{i=1}^n x_i^2 - \bar {x}} {n-1}\right)\quad\text{where }x = \log error 
 \end{aligned}
 $$
-in this case we take into account the logarithm of a ratio because it better approximates to a normal distribution and it is homoscedastic.
+in this case we take into account the logarithm of a ratio because it better approximates to a normal distribution and it is homoscedastic. We could have taken in consideration different data transformations, but most of the time it would have been an unequous choice: the logarithm stretches the interval $[0, 1]$ to $]-\infty, 0]$ and reduces the distance between data $> 1$, while a square root would have also reduced data $>1$ but data in $[0,1]$ would have been more close to each other, with the possibility to make predictions of understimations harder.
 
