--- a/docs/sections/03.tex
+++ b/docs/sections/03.tex
@@ -8,6 +8,8 @@ Tenendo in considerazione il fatto che il boosting dovrebbe ridurre il bias e il
   \item indagare maggiormente sugli outliers
   \item creare altre variabili rapporto tra variabili
   \item standardize $\log error$ dividing by the standard deviation
+  \item discuss the probability to see a logerror in the tails of the standardized distribution
+  \item make a notebook with removing outliers from standar predictions
 \end{itemize}
 
 If we assume that most of the errors have been made by humans it is not a surprise to see that errors are most incident where there are more data.
