--- a/04 - Random Forests.ipynb
+++ b/04 - Random Forests.ipynb
@@ -17,14 +17,12 @@
    "source": [
     "# Random Forest\n",
     "\n",
-    "Visto il risultato ottenuto con gli alberi di decisione potrebbe aver senso cercare di ridurre l'errore attraverso una random forest\n",
-    "\n",
-    "## Globalmente"
+    "## Globally"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 1,
    "id": "cf0d13da",
    "metadata": {},
    "outputs": [],
@@ -45,12 +43,12 @@
    "id": "33ba28be",
    "metadata": {},
    "source": [
-    "Creo un dataset piccolo su cui fare tuning con il grid search cross validation"
+    "I create a smaller dataset for cross validation tuning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 2,
    "id": "c16871e2",
    "metadata": {},
    "outputs": [
@@ -60,7 +58,7 @@
        "(21486, 21486)"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3120,7 +3118,9 @@
    "cell_type": "code",
    "execution_count": 127,
    "id": "bd320b16",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3207,7 +3207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 10,
    "id": "e214d869",
    "metadata": {},
    "outputs": [
@@ -3224,6 +3224,7 @@
    "source": [
     "rf = RandomForestRegressor(n_jobs=-1,\n",
     "                           max_features='log2',\n",
+    "                           max_depth=30,\n",
     "                           min_samples_leaf=310,\n",
     "                           min_samples_split=5,\n",
     "                           n_estimators=700,\n",
