--- a/06 - Outliers.ipynb
+++ b/06 - Outliers.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "b2a385ab",
+   "execution_count": 129,
+   "id": "fe4b57e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "447d3027",
+   "id": "69c9195a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "8c4148e5",
+   "id": "e8d3e502",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "5db9299f",
+   "id": "ef2f29da",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "db5f22fa",
+   "id": "9a15603a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "904b36dc",
+   "id": "3d0b16c1",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "bc285c41",
+   "id": "05ae282e",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "f063da56",
+   "id": "59aa3198",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "9d236103",
+   "id": "4089ba0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,8 +199,86 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 228,
+   "id": "ee8310c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean absolute error: 0.05431\n",
+      " Mean squared error: 0.00930\n",
+      "           R2 score: -0.00074\n"
+     ]
+    }
+   ],
+   "source": [
+    "baseM = BaseModel()\n",
+    "\n",
+    "baseM.fit(X_train_o, y_train_o)\n",
+    "\n",
+    "y_pred=baseM.predict(X_test_o)\n",
+    "\n",
+    "print_measure(y_true=y_test_o, y_pred=y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "id": "da484c5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean absolute error: 0.05121\n",
+      " Mean squared error: 0.00933\n",
+      "           R2 score: -0.00001\n"
+     ]
+    }
+   ],
+   "source": [
+    "baseM = BaseModel()\n",
+    "\n",
+    "baseM.fit(X_train_v, y_train_v)\n",
+    "\n",
+    "y_pred=baseM.predict(X_test_v)\n",
+    "\n",
+    "print_measure(y_true=y_test_v, y_pred=y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "id": "2a398c6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean absolute error: 0.06736\n",
+      " Mean squared error: 0.01450\n",
+      "           R2 score: -0.00000\n"
+     ]
+    }
+   ],
+   "source": [
+    "baseM = BaseModel()\n",
+    "\n",
+    "baseM.fit(X_train_la, y_train_la)\n",
+    "\n",
+    "y_pred=baseM.predict(X_test_la)\n",
+    "\n",
+    "print_measure(y_true=y_test_la, y_pred=y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 71,
-   "id": "f1661f91",
+   "id": "c2158e59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "47e2968c",
+   "id": "f4196133",
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "30b3caef",
+   "id": "a1d6da78",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "13b47946",
+   "id": "7ba5f601",
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "d377da7e",
+   "id": "839d3ec8",
    "metadata": {},
    "outputs": [
     {
